k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: probes
spec:
  selector:
    app: probes
  ports:
    - port: 80
      targetPort: 8080
